<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BuildYourOwnActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/build_your_own_pizza"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/buildYourOwnImageView"
        android:layout_width="152dp"
        android:layout_height="166dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="73dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="72dp"
        android:contentDescription="@string/byo_activity_image"
        android:src="@drawable/build_your_own_activity_image"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toStartOf="@+id/sizeRadioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@drawable/build_your_own_activity_image" />

    <RadioGroup
        android:id="@+id/sizeRadioGroup"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="13dp"
        app:layout_constraintBottom_toBottomOf="@+id/buildYourOwnImageView"
        app:layout_constraintEnd_toStartOf="@+id/sauceRadioGroup"
        app:layout_constraintStart_toEndOf="@+id/buildYourOwnImageView"
        app:layout_constraintTop_toTopOf="@+id/sauceRadioGroup">

        <RadioButton
            android:id="@+id/smallSizeRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/smallRadioButtonText" />

        <RadioButton
            android:id="@+id/mediumSizeRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mediumRadioButtonText" />

        <RadioButton
            android:id="@+id/largeSizeRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/largeRadioButtonText" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/sauceRadioGroup"
        android:layout_width="0dp"
        android:layout_height="112dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="95dp"
        app:layout_constraintBottom_toBottomOf="@+id/extraCheeseCheckBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sizeRadioGroup"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/tomatoRadioButton"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/tomatoRadioButtonText" />

        <RadioButton
            android:id="@+id/alfredoRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alfredoRadioButtonText" />
    </RadioGroup>

    <ListView
        android:id="@+id/allToppingsListView"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginTop="91dp"
        android:layout_marginBottom="91dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/priceTextView"
        app:layout_constraintStart_toStartOf="@+id/priceTextView"
        app:layout_constraintTop_toTopOf="@+id/extraSauceCheckBox" />

    <ListView
        android:id="@+id/selectedToppingsListView"
        android:layout_width="0dp"
        android:layout_height="251dp"
        android:layout_marginTop="92dp"
        android:layout_marginBottom="91dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/sauceRadioGroup"
        app:layout_constraintStart_toStartOf="@+id/addToOrderButton"
        app:layout_constraintTop_toBottomOf="@+id/extraCheeseCheckBox" />

    <CheckBox
        android:id="@+id/extraSauceCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="4dp"
        android:text="@string/extra_sauce"
        app:layout_constraintEnd_toStartOf="@+id/extraCheeseCheckBox"
        app:layout_constraintTop_toBottomOf="@+id/buildYourOwnImageView" />

    <CheckBox
        android:id="@+id/extraCheeseCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/extra_cheese"
        app:layout_constraintBaseline_toBaselineOf="@+id/extraSauceCheckBox"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="307dp"
        android:text="@string/add_topping"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="@+id/allToppingsListView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/priceTextView"
        android:layout_width="153dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="6dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="@+id/addToOrderButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/allToppingsListView" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="14dp"
        android:text="@string/selected_toppings_click_to_remove"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/selectedToppingsListView"
        app:layout_constraintEnd_toEndOf="@+id/selectedToppingsListView"
        app:layout_constraintStart_toStartOf="@+id/selectedToppingsListView"
        app:layout_constraintTop_toBottomOf="@+id/extraCheeseCheckBox" />

    <Button
        android:id="@+id/addToOrderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="33dp"
        android:text="@string/add_to_order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectedToppingsListView" />

</androidx.constraintlayout.widget.ConstraintLayout>